cambios para bd

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,5 @@
-<app-filtros></app-filtros>
+<h1 style="color: yellow; background: blue; padding: 20px; position: fixed; top: 0; z-index: 9999;">
+    SI VES ESTO, EL INDEX FUNCIONA
+</h1>
+
+<router-outlet></router-outlet>
