--- a/src/app/components/filtros/filtros.html
+++ b/src/app/components/filtros/filtros.html
@@ -14,8 +14,7 @@
   </header>
 
   <!-- 2. SECCIÓN DE FILTROS (ESTILO IMAGEN) -->
-  <div
-    class="max-w-7xl mx-auto bg-[#1c2237] p-8 rounded-2xl border border-gray-700/30 mb-8 shadow-2xl relative overflow-hidden">
+  <div class="max-w-7xl mx-auto bg-[#1c2237] p-8 rounded-2xl border border-gray-700/30 mb-8 shadow-2xl relative">
 
     <!-- Row 1: 4 columns -->
     <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-6">
@@ -47,13 +46,13 @@
       <div class="md:col-span-4 flex flex-col gap-2">
         <label class="text-xs font-semibold text-gray-400">Sector</label>
         <p-select [options]="sectores" [(ngModel)]="filtros.sector" optionLabel="label" placeholder="Seleccione Sector"
-          class="custom-select-v3 w-full"></p-select>
+          appendTo="body" class="custom-select-v3 w-full"></p-select>
       </div>
 
       <div class="md:col-span-4 flex flex-col gap-2">
         <label class="text-xs font-semibold text-gray-400">Gerencia</label>
         <p-select [options]="gerencias" [(ngModel)]="filtros.gerencia" optionLabel="label"
-          placeholder="Seleccione Gerencia" class="custom-select-v3 w-full"></p-select>
+          placeholder="Seleccione Gerencia" appendTo="body" class="custom-select-v3 w-full"></p-select>
       </div>
 
       <div class="md:col-span-4 mt-2 md:mt-0">
